# BFV-Mul-Add-with-Seal-Integration

./: README.md
BFV_Scheme/: uint128.h
SEAL-Windows/: CMakeLists.txt  README.md  decryption_test.cu
